fix: Scrollbar

--- a/client/src/app/components/clavardage/clavardage.component.scss
+++ b/client/src/app/components/clavardage/clavardage.component.scss
@@ -21,6 +21,20 @@
         background-clip: padding-box;
         word-wrap: break-word;
 
+        &::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: lighten($primary-dark, 20);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $primary-dark;
+            border-radius: 6px;
+            border: 3px solid lighten($primary-dark, 20);
+        }
+
         .messages {
             list-style-type: none;
             padding: 0;
